# csound-da-gl-math-plugin

./: CMakeLists.txt  readme.md  vcpkg.json
cmake/: fetch_dependency.cmake
src/: _init_.c  common.c  common.cpp  common.h  common.hpp  common_types.h  mat4.cpp  mat4.h  vec3.cpp  vec3.h
test/: macros.orc  shared.orc  test-mat4.orc  test.csd  test.orc  test_mat4.orc  test_vec3.orc
